<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch2"
    tools:context=".SubmissionPage"
   >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginEnd="54dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/gads_logo"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/img_banner3" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:textAlignment="center"
                android:textColor="#FFAB00"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="8dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="364dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:background="@drawable/button_submit"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="40dp"
                android:requiresFadingEdge="horizontal" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="50"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="50"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="8dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/etProjectLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/project_on_github_link"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <Button
                android:id="@+id/btnSubmitFinal"
                android:layout_width="152dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:background="@drawable/orange_submit_button"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProjectLink" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


