...
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSubmitMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/submit_button"
                android:scaleX="0.5"
                android:scaleY="0.5"
...
